infra/k8s/ingress/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "ecom.local"
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-client
                port:
                  number: 80
